v0.1.61:  Spark 4.0.1 및 Hadoop 3.4.2 지원 및 의존성 업데이트